--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div id="root">
+    <h1 class="counter-title">Counter</h1>
     <div class="counter">
       <div class="screen">0</div>
       <div class="btn-wrapper">
